[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/telegrama_render.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ButtonStyles/disabled_style.tres" type="StyleBox" id=2]
[ext_resource path="res://ButtonStyles/enabled_style.tres" type="StyleBox" id=3]
[ext_resource path="res://ButtonStyles/hovered_button.tres" type="StyleBox" id=4]
[ext_resource path="res://ButtonStyles/pressed_style.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/LevelSelect.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=7]
[ext_resource path="res://sfx/blip.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0.705882, 0.705882, 0.705882, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level Select"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="."]
margin_left = 65.0
margin_top = 175.0
margin_right = 211.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( -526, -10 )
custom_colors/font_color_disabled = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_focus = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 3 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="."]
margin_left = 315.0
margin_top = 175.0
margin_right = 461.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( -526, -10 )
custom_colors/font_color_disabled = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_focus = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="."]
margin_left = 565.0
margin_top = 175.0
margin_right = 711.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( -526, -10 )
custom_colors/font_color_disabled = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_focus = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Button" parent="."]
margin_left = 815.0
margin_top = 175.0
margin_right = 961.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( -526, -10 )
custom_colors/font_color_disabled = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_focus = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Button" parent="."]
margin_left = 315.0
margin_top = 375.0
margin_right = 461.0
margin_bottom = 479.0
rect_pivot_offset = Vector2( -526, -10 )
custom_colors/font_color_disabled = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_focus = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6" type="Button" parent="."]
margin_left = 565.0
margin_top = 375.0
margin_right = 711.0
margin_bottom = 479.0
rect_pivot_offset = Vector2( -526, -10 )
custom_colors/font_color_disabled = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_focus = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
custom_colors/font_color_hover = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.317647, 0.317647, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 7 )]

[node name="haha" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Level4" to="." method="_on_Level4_pressed"]
[connection signal="pressed" from="Level5" to="." method="_on_Level5_pressed"]
[connection signal="pressed" from="Level6" to="." method="_on_Level6_pressed"]
[connection signal="tree_exited" from="haha" to="." method="_on_haha_tree_exited"]
